--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 </head>
 <body>
     <section class="card">
-        <div class="img-profile">
-            <img src="./Images/profile.png" alt="">
-        </div>
-
-        <div>
-            <h1>Maria Eduarda</h1>
-            <p>@servicos_dudavieira</p>
-            <p>Estudante ADS</p>
-        </div>
+       
+       <div class="cabecalho">
+           <div class="img-profile">
+               <img src="./Images/profile.png" alt="">
+           </div>
+   
+           <div>
+               <h1>Maria Eduarda</h1>
+               <p>@servicos_dudavieira</p>
+               <p>Estudante ADS</p>
+           </div>
+       </div>
 
         <section class="skills">
             <div>
@@ -48,9 +51,6 @@
                 </ul>
             </nav>
         </footer>
-
-
-
 
     </section>
 
