"alterações ainda não finalizadas"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        </div>
 
         <section class="skills">
-            <div>
+            <div class="titulo2">
                 <h2>Skills</h2>
             </div>
     
