--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <section class="card">
-       
        <div class="cabecalho">
            <div class="img-profile">
                <img src="./Images/profile.png" alt="">
            </div>
    
-           <div>
+           <div class="subtitulo">
                <h1>Maria Eduarda</h1>
                <p>@servicos_dudavieira</p>
                <p>Estudante ADS</p>
@@ -41,13 +40,12 @@
             </div>
         </section>
     
-        <footer>
-            <nav>
-                <ul>
-                    <li>GITHUB</li>
-                    <li>Instagram</li>
-                    <li>e-mail</li>
-                    <li>LinkedIn</li>
+        <footer class="rodape">
+            <nav class="nav-bar">
+                <ul class="nav-list">
+                    <li class="nav-item" ><img src="" alt="GitHub"></li>
+                    <li class="nav-item" ><img src="" alt="Instagram"></li>
+                    <li class="nav-item" ><img src="" alt="LinkedIn"></li>
                 </ul>
             </nav>
         </footer>
