adicionando botao para navegação

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 </ul>
             </div>
         </section>
+
+        <section class="projetos">
+            <a href="./pages/projetos.html">Principais projetos</a>
+        </section>
     
         <footer class="rodape">
             <nav class="nav-bar">
