--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
     <title>My Profile</title>
 </head>
 <body>
-    <section class="card">
+    <div class="bola">
+
+    </div>
        <div class="cabecalho">
-           <div class="img-profile">
-               <img src="./Images/profile.png" alt="">
-           </div>
+        <div class="azul">
+            <div class="img-profile">
+                <img src="./Images/profile.png" alt="">
+            </div>
+        </div>
    
            <div class="subtitulo">
                <h1>Maria Eduarda</h1>
                <p>@servicos_dudavieira</p>
-               <p>Estudante ADS</p>
+               <p class="cargo">Estudante ADS</p>
            </div>
        </div>
 
         <section class="skills">
             <div class="titulo2">
-                <h2>Skills</h2>
+                <h1>Skills</h1>
             </div>
     
             <div class="skill-list">
@@ -47,14 +51,12 @@
         <footer class="rodape">
             <nav class="nav-bar">
                 <ul class="nav-list">
-                    <li class="nav-item" ><img src="" alt="GitHub"></li>
-                    <li class="nav-item" ><img src="" alt="Instagram"></li>
-                    <li class="nav-item" ><img src="" alt="LinkedIn"></li>
+                    <li class="nav-item" ><a href=""><img src="./Images/4373152_github_logo_logos_icon.png" alt="GitHub"></a></li>
+                    <li class="nav-item" ><a href=""><img src="./Images/email-icon.png" alt="E-mail"></a></li>
+                    <li class="nav-item" ><a href=""><img src="./Images/5279114_linkedin_network_social network_linkedin logo_icon (1).png" alt="LinkedIn"></a></li>
                 </ul>
             </nav>
         </footer>
-
-    </section>
 
 </body>
 </html>
