"criando página de projetos"

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -4,44 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="..//Images/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Projetos</title>
 </head>
 <body>
-    <section>
+    <section class="container">
+        <div class="voltar">
+            <a href="../index.html">Voltar</a>
+        </div>
+
+        <h1 class="titulo-page">Projetos</h1>
+
         <div class="lista">
-            <div>
-                <div>
-                    <h2></h2>
+            <div class="card">
+                <div class="card-titulo">
+                    <h2>Delivery</h2>
                 </div>
 
                 <figure>
-                    <img src="" alt="">
-                    <figcaption></figcaption>
+                    <a href="https://ffoodrestaurante.netlify.app/"><img src="../Images/future-food.png" alt=""></a>
+                    <figcaption class="caption" >site em HTML e CSS, sobre delivery</figcaption>
                 </figure>
             </div>
 
-            <div>
-                <div>
-                    <h2></h2>
+            <div class="card">
+                <div class="card-titulo">
+                    <h2>Bunny Game</h2>
                 </div>
 
                 <figure>
-                    <img src="" alt="">
-                    <figcaption></figcaption>
+                    <a href="https://bunnygame-flip.netlify.app/"><img src="../Images/bunnygame.png" alt=""></a>
+                    <figcaption class="caption" >Jogo feito em HTML e CSS</figcaption>
                 </figure>
             </div>
 
-            <div>
-                <div>
-                    <h2></h2>
+            <div class="card">
+                <div class="card-titulo">
+                    <h2>Relógio</h2>
                 </div>
 
                 <figure>
-                    <img src="" alt="">
-                    <figcaption></figcaption>
+                    <a href="https://mecduda99.github.io/relogio_digital/"><img src="../Images/relogiodigital.jpeg" alt=""></a>
+                    <figcaption class="caption" >Relógio digital feito em HTML, CSS e JavaScript</figcaption>
                 </figure>
             </div>
         </div>
     </section>
+
+    <footer class="rodape">
+        <nav class="nav-bar">
+            <ul class="nav-list">
+                <li class="nav-item" ><a href=""><img src="../Images/4373152_github_logo_logos_icon.png" alt="GitHub"></a></li>
+                <li class="nav-item" ><a href=""><img src="../Images/email-icon.png" alt="E-mail"></a></li>
+                <li class="nav-item" ><a href=""><img src="../Images/5279114_linkedin_network_social network_linkedin logo_icon (1).png" alt="LinkedIn"></a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
