--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -24,7 +24,7 @@
 
                 <figure>
                     <a href="https://ffoodrestaurante.netlify.app/"><img src="../Images/future-food.png" alt=""></a>
-                    <figcaption class="caption" >site em HTML e CSS, sobre delivery</figcaption>
+                    <figcaption class="caption" >site em HTML e CSS com Framework Bootstrap 3, sobre delivery</figcaption>
                 </figure>
             </div>
 
