--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -35,7 +35,7 @@
 
                 <figure>
                     <a href="https://bunnygame-flip.netlify.app/"><img src="../Images/bunnygame.png" alt=""></a>
-                    <figcaption class="caption" >Jogo feito em HTML e CSS</figcaption>
+                    <figcaption class="caption" >Jogo feito em HTML, CSS e JavaScript</figcaption>
                 </figure>
             </div>
 
