--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <footer class="rodape">
             <nav class="nav-bar">
                 <ul class="nav-list">
-                    <li class="nav-item" ><a href=""><img src="./Images/4373152_github_logo_logos_icon.png" alt="GitHub"></a></li>
-                    <li class="nav-item" ><a href=""><img src="./Images/email-icon.png" alt="E-mail"></a></li>
-                    <li class="nav-item" ><a href=""><img src="./Images/5279114_linkedin_network_social network_linkedin logo_icon (1).png" alt="LinkedIn"></a></li>
+                    <li class="nav-item" ><a href="https://github.com/Mecduda99"><img src="./Images/4373152_github_logo_logos_icon.png" alt="GitHub"></a></li>
+                    <li class="nav-item" ><a href="mailto:duda.cav98@gmail.com"><img src="./Images/email-icon.png" alt="E-mail"></a></li>
+                    <li class="nav-item" ><a href="https://www.linkedin.com/in/maria-eduarda-costa-de-vieira-05b15b212"><img src="./Images/5279114_linkedin_network_social network_linkedin logo_icon (1).png" alt="LinkedIn"></a></li>
                 </ul>
             </nav>
         </footer>
