--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <figure>
-                    <a href="https://ffoodrestaurante.netlify.app/"><img src="../Images/future-food.png" alt=""></a>
+                    <a href="https://ffoodrestaurante.netlify.app/" target="_blank"><img src="../Images/future-food.png" alt=""></a>
                     <figcaption class="caption" >site em HTML e CSS com Framework Bootstrap 3, sobre delivery</figcaption>
                 </figure>
             </div>
@@ -34,7 +34,7 @@
                 </div>
 
                 <figure>
-                    <a href="https://bunnygame-flip.netlify.app/"><img src="../Images/bunnygame.png" alt=""></a>
+                    <a href="https://bunnygame-flip.netlify.app/" target="_blank"><img src="../Images/bunnygame.png" alt=""></a>
                     <figcaption class="caption" >Jogo feito em HTML, CSS e JavaScript</figcaption>
                 </figure>
             </div>
@@ -45,7 +45,7 @@
                 </div>
 
                 <figure>
-                    <a href="https://mecduda99.github.io/relogio_digital/"><img src="../Images/relogiodigital.jpeg" alt=""></a>
+                    <a href="https://mecduda99.github.io/relogio_digital/" target="_blank"><img src="../Images/relogiodigital.jpeg" alt=""></a>
                     <figcaption class="caption" >Relógio digital feito em HTML, CSS e JavaScript</figcaption>
                 </figure>
             </div>
