--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -49,6 +49,17 @@
                     <figcaption class="caption" >Relógio digital feito em HTML, CSS e JavaScript</figcaption>
                 </figure>
             </div>
+
+            <div class="card">
+                <div class="card-titulo">
+                    <h2>WoW Site</h2>
+                </div>
+
+                <figure>
+                    <a href="https://mecduda99.github.io/CP2-responsive-web-dev.github.io/" target="_blank"><img src="../Images/relogiodigital.jpeg" alt=""></a>
+                    <figcaption class="caption" >Relógio digital feito em HTML, CSS e JavaScript</figcaption>
+                </figure>
+            </div>
         </div>
     </section>
 
