Update projetos.html - wow page add

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -56,8 +56,8 @@
                 </div>
 
                 <figure>
-                    <a href="https://mecduda99.github.io/CP2-responsive-web-dev.github.io/" target="_blank"><img src="../Images/relogiodigital.jpeg" alt=""></a>
-                    <figcaption class="caption" >Relógio digital feito em HTML, CSS e JavaScript</figcaption>
+                    <a href="https://mecduda99.github.io/CP2-responsive-web-dev.github.io/" target="_blank"><img src="../Images/wow.jpeg" alt=""></a>
+                    <figcaption class="caption" >Trabalho de faculdade responsivo feito com HTML, CSS e JavaScript</figcaption>
                 </figure>
             </div>
         </div>
