Update projetos.html 0 png

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <figure>
-                    <a href="https://mecduda99.github.io/CP2-responsive-web-dev.github.io/" target="_blank"><img src="../Images/wow.jpeg" alt=""></a>
+                    <a href="https://mecduda99.github.io/CP2-responsive-web-dev.github.io/" target="_blank"><img src="../Images/wow.png" alt=""></a>
                     <figcaption class="caption" >Trabalho de faculdade responsivo feito com HTML, CSS e JavaScript</figcaption>
                 </figure>
             </div>
